--- a/pythonproject.ipynb
+++ b/pythonproject.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyNrzZm6WcYRQWBoXpmoI8gu",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,61 +18,22 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/FizaAslam1/python_practice_questions/blob/main/pythonproject.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "GUESS NUMBERS\n"
       ],
       "metadata": {
         "id": "lkpRHHNJewmL"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#this uses concept of loops\n",
-        "import random\n",
-        "\n",
-        "target=random.randint(1,100)\n",
-        "while True:\n",
-        "  userchoice=input(\"Guess the  target or Quit(Q):\")\n",
-        "  if(userchoice==\"Q\"):\n",
-        "    break\n",
-        "  userchoice=int(userchoice)\n",
-        "  if(userchoice==target):\n",
-        "     print(\"Success:Correct guess!!\")\n",
-        "     break\n",
-        "  elif(userchoice<target):\n",
-        "     print(\"Your guess number was samll..guess big number\")\n",
-        "  else:\n",
-        "     print(\"Your guess number was big..guess small number\")\n",
-        "\n",
-        "\n",
-        "\n",
-        "print(\"__GAME OVER---TRY AGAIN.\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "XvROogQXezID",
-        "outputId": "178fe800-306d-448f-85c3-bc83920e850b"
-      },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Guess the  target or Quit(Q):4\n",
-            "Your guess number was samll..guess big number\n",
-            "Guess the  target or Quit(Q):3\n",
-            "Your guess number was samll..guess big number\n",
-            "Guess the  target or Quit(Q):2\n",
-            "Your guess number was samll..guess big number\n",
-            "Guess the  target or Quit(Q):Q\n",
-            "__GAME OVER---TRY AGAIN.\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -149,6 +112,46 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "GUESS NUMBER GAME\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Uz7ydK-Vq9I5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "import random\n",
+        "\n",
+        "target=random.randint(1,100)\n",
+        "while True:\n",
+        "  userchoice=input(\"Guess the  target or Quit(Q):\")\n",
+        "  if(userchoice==\"Q\"):\n",
+        "    break\n",
+        "  userchoice=int(userchoice)\n",
+        "  if(userchoice==target):\n",
+        "     print(\"Success:Correct guess!!\")\n",
+        "     break\n",
+        "  elif(userchoice<target):\n",
+        "     print(\"Your guess number was samll..guess big number\")\n",
+        "  else:\n",
+        "     print(\"Your guess number was big..guess small number\")\n",
+        "\n",
+        "\n",
+        "\n",
+        "print(\"__GAME OVER---TRY AGAIN.\")"
+      ],
+      "metadata": {
+        "id": "Qv22itTxrBXh"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
